test_regress/t/t_mailbox.out
%Error: t/t_mailbox.v:20:4: Can't find typedef: 'mailbox'
   20 |    mailbox m;
      |    ^~~~~~~
%Error: Exiting due to
